--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/imagen-1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Junior Alejandro</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas. ¡Descubre mis proyectos y habilidades!"
+    />
+    <meta
+      name="keywords"
+      content="Junior Alejandro, Portfolio, React, Web Developer, Frontend, Proyectos, Programador"
+    />
+    <meta name="author" content="Junior Alejandro" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tusitio.com/" />
+    <meta property="og:title" content="Junior Alejandro Portfolio" />
+    <meta
+      property="og:description"
+      content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas."
+    />
+    <meta property="og:image" content="/src/assets/imagen-1.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://tusitio.com/" />
+    <meta name="twitter:title" content="Junior Alejandro Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas."
+    />
+    <meta name="twitter:image" content="/src/assets/imagen-1.png" />
   </head>
   <body>
     <div id="root"></div>
