--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Junior Alejandro" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tusitio.com/" />
+    <meta property="og:url" content="https://junior-alejandro.vercel.app/" />
     <meta property="og:title" content="Junior Alejandro Portfolio" />
     <meta
       property="og:description"
@@ -26,7 +26,7 @@
     <meta property="og:image" content="/src/assets/one.jpg" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://tusitio.com/" />
+    <meta name="twitter:url" content="https://junior-alejandro.vercel.app/" />
     <meta name="twitter:title" content="Junior Alejandro Portfolio" />
     <meta
       name="twitter:description"
