--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/one.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/public/one.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Junior Alejandro</title>
     <!-- SEO Meta Tags -->
@@ -32,7 +32,7 @@
       name="twitter:description"
       content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas."
     />
-    <meta name="twitter:image" content="/src/assets/one.jpg" />
+    <meta name="twitter:image" content="/public/one.jpg" />
   </head>
   <body>
     <div id="root"></div>
