--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/one.jpg" />
+    <link rel="icon" type="image/jpeg" href="/one.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Junior Alejandro</title>
     <!-- SEO Meta Tags -->
@@ -23,7 +23,7 @@
       property="og:description"
       content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas."
     />
-    <meta property="og:image" content="/src/assets/one.jpg" />
+    <meta property="og:image" content="/one.jpg" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://junior-alejandro.vercel.app/" />
@@ -32,7 +32,7 @@
       name="twitter:description"
       content="Portfolio de Junior Alejandro. Desarrollador web especializado en React y tecnologías modernas."
     />
-    <meta name="twitter:image" content="/public/one.jpg" />
+    <meta name="twitter:image" content="/one.jpg" />
   </head>
   <body>
     <div id="root"></div>
